--- a/ChatApp/ChatClient/ChatClient.vcxproj
+++ b/ChatApp/ChatClient/ChatClient.vcxproj
@@ -119,10 +119,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="UtilsFunction.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="Protocol.h" />
+    <ClInclude Include="UtilsFunction.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
