--- a/ChatApp/ChatClient/ChatClient.vcxproj.filters
+++ b/ChatApp/ChatClient/ChatClient.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="Client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="UtilsFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h">
+    <ClInclude Include="UtilsFunction.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Protocol.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
